repositories/workloads/ex-app/bg-demo-traditional/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  #checkov:skip=CKV_K8S_21:The kustomization.yaml specifies the resource's namespace.
  name: bg-demo-active
  labels:
    app.kubernetes.io/name: bg-demo
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: bg-demo

---
apiVersion: v1
kind: Service
metadata:
  #checkov:skip=CKV_K8S_21:The kustomization.yaml specifies the resource's namespace.
  name: bg-demo-preview
  labels:
    app.kubernetes.io/name: bg-demo
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: bg-demo
