repositories/workloads/ex-app/bg-demo-traditional/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  #checkov:skip=CKV_K8S_21:The kustomization.yaml specifies the resource's namespace.
  name: bg-demo-active
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: bg-demo-active
                port:
                  name: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  #checkov:skip=CKV_K8S_21:The kustomization.yaml specifies the resource's namespace.
  name: bg-demo-preview
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: bg-demo-preview
                port:
                  name: http
